# MedicareApp

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SETUP.md  GIT_WORKFLOW.md  README.md  RELEASES.md  docker-compose.yml
.deployment/: README.md
.github/: COMMIT_MESSAGE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  release.yml
.github/workflows/: backend-docker-deploy.yml  backend-release.yml  frontend-docker-deploy.yml  frontend-release.yml
.tmpenv/: pyvenv.cfg
.venv-1/: pyvenv.cfg
MedicareApp/: CONTRIBUTING.md  README.md
MedicareApp-no-git-2/: README.md
MedicareApp-no-git-2/MedicareApp-no-git/frontend/: Dockerfile  package-lock.json
MedicareApp-no-git-2/backend/: README.md
MedicareApp-no-git-2/frontend/: README.md  index.html  package.json
MedicareApp-no-git-2/frontend/src/: App.jsx  Departments.jsx
MedicareApp/backend/: Dockerfile  README.md  pyproject.toml
MedicareApp/backend/app/: main.py
MedicareApp/backend/tests/: test_login.py
MedicareApp/frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
backend/: .dockerignore  .env.example  CHANGELOG.md  README.md  README_DOCS.md  main.py  pytest.ini  requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/tests/: test_basic.py  test_main.py
frontend/: CHANGELOG.md  Dockerfile  README.md  RELEASE.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vitest.config.js
frontend/src/: App.jsx  App.test.jsx  Departments.jsx  Header.test.jsx  index.css  main.jsx
(+28 files in other folders)
